@@ -1,4 +1,8 @@
 release 1.0.2 (2009-01/02)
+- Fixed issue 177
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=177
+  The method Client.getProviders() can be used to get the Providers instance
+  utilized by the client.
 - Fixed issue 183
   https://jersey.dev.java.net/issues/show_bug.cgi?id=183
   Query parameters may be built for a WebResource as follows:
